--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,13 +86,16 @@ jobs:
         run: go install sigs.k8s.io/krew/cmd/validate-krew-manifest@latest
       - name: setup-tparse
         run: go install github.com/mfridman/tparse@latest
-      - run: task setup
-      - run: task build
-      - run: task test | tee output.json | tparse -notests -follow -all
+      - name: setup
+        run: |
+          task setup
+          task build
+      - name: test
+        run: |
+          task test | tee output.json | tparse -notests -follow -all
+          tparse -format markdown -file output.json -all > $GITHUB_STEP_SUMMARY
         env:
           TEST_OPTIONS: "-json"
-      - run: tparse -format markdown -file output.json -all > $GITHUB_STEP_SUMMARY
-        env:
           NO_COLOR: 1
       - uses: codecov/codecov-action@81cd2dc8148241f03f5839d295e000b8f761e378 # v3
         with:
