--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -84,7 +84,19 @@ jobs:
       - uses: anchore/sbom-action/download-syft@bb716408e75840bbb01e839347cd213767269d4a # v0.10.0
       - name: setup-validate-krew-manifest
         run: go install sigs.k8s.io/krew/cmd/validate-krew-manifest@latest
-      - run: task ci
+      - name: setup-tparse
+        run: go install github.com/mfridman/tparse@latest
+      - name: setup
+        run: |
+          task setup
+          task build
+      - name: test
+        run: |
+          task test | tee output.json | tparse -notests -follow -all
+          tparse -format markdown -file output.json -all > $GITHUB_STEP_SUMMARY
+        env:
+          TEST_OPTIONS: "-json"
+          NO_COLOR: 1
       - uses: codecov/codecov-action@81cd2dc8148241f03f5839d295e000b8f761e378 # v3
         with:
           file: ./coverage.txt
