fix(ci): gitleaks license (#3177)
* fix(ci): gitleaks license

Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

* fix: gitleaks config path

Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - uses: zricethezav/gitleaks-action@master
-        with:
-          config-path: .github/gitleaks.toml
+      - uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITLEAKS_LICENSE: ${{ secrets.GITLEAKS_LICENSE}}
