fix: run gitleaks and grype on prs
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -2,8 +2,9 @@ name: gitleaks
 
 on:
   push:
-    branches:
-      - 'main'
+    branches: ['main']
+    tags: ['v*']
+  pull_request:
 
 
 permissions:
