fix: fish completions path on nfpm
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -223,7 +223,7 @@ nfpms:
         file_info:
           mode: 0644
       - src: ./completions/goreleaser.fish
-        dst: /usr/share/fish/completions/goreleaser.fish
+        dst: /usr/share/fish/vendor_completions.d/goreleaser.fish
         file_info:
           mode: 0644
       - src: ./completions/goreleaser.zsh
