fix: binary archive when multiple builds
closes #3383

Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -139,6 +139,7 @@ nav:
   - errors/no-main.md
   - errors/resource-not-accessible-by-integration.md
   - errors/no-history.md
+  - errors/multiple-binaries-archive.md
 - deprecations.md
 - Cookbooks:
   - About: cookbooks/index.md
