--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,14 +4,10 @@ on:
   push:
     branches:
       - 'main'
-    tags:
-      - 'v*'
   pull_request:
 
 permissions:
-  contents: write
-  id-token: write
-  packages: write
+  contents: read
 
 jobs:
   govulncheck:
@@ -25,7 +21,7 @@ jobs:
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
     needs:
-      - goreleaser
+      - test
     if: github.ref == 'refs/heads/main'
     strategy:
       matrix:
@@ -47,7 +43,7 @@ jobs:
             ./dist/*.apk
           key: ${{ github.ref }}
       - run: task goreleaser:test:${{ matrix.format }}
-  goreleaser:
+  test:
     runs-on: ubuntu-latest
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
@@ -96,33 +92,3 @@ jobs:
           file: ./coverage.txt
       - run: ./goreleaser check
       - run: git diff
-      - name: dockerhub-login
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # v1
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-      - name: ghcr-login
-        if: startsWith(github.ref, 'refs/tags/v')
-        uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: snapcraft-login
-        if: startsWith(github.ref, 'refs/tags/v')
-        run: snapcraft login --with <(echo "${{ secrets.SNAPCRAFT_LOGIN }}")
-      - name: goreleaser-release
-        if: startsWith(github.ref, 'refs/tags/v') ||  github.ref == 'refs/heads/main'
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          TWITTER_CONSUMER_KEY: ${{ secrets.TWITTER_CONSUMER_KEY }}
-          TWITTER_CONSUMER_SECRET: ${{ secrets.TWITTER_CONSUMER_SECRET }}
-          TWITTER_ACCESS_TOKEN: ${{ secrets.TWITTER_ACCESS_TOKEN }}
-          TWITTER_ACCESS_TOKEN_SECRET: ${{ secrets.TWITTER_ACCESS_TOKEN_SECRET }}
-          COSIGN_PWD: ${{ secrets.COSIGN_PWD }}
-          FURY_TOKEN: ${{ secrets.FURY_TOKEN }}
-          DISCORD_WEBHOOK_ID: ${{ secrets.DISCORD_WEBHOOK_ID }}
-          DISCORD_WEBHOOK_TOKEN: ${{ secrets.DISCORD_WEBHOOK_TOKEN }}
-          AUR_KEY: ${{ secrets.AUR_KEY }}
-        run: task goreleaser
