--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,8 @@ name: release
 
 on:
   push:
+    branches:
+      - 'main'
     tags:
       - 'v*'
 
@@ -11,6 +13,33 @@ permissions:
   packages: write
 
 jobs:
+  goreleaser-check-pkgs:
+    runs-on: ubuntu-latest
+    env:
+      DOCKER_CLI_EXPERIMENTAL: "enabled"
+    needs:
+      - goreleaser
+    if: github.ref == 'refs/heads/main'
+    strategy:
+      matrix:
+        format: [ deb, rpm, apk ]
+    steps:
+      - uses: actions/checkout@2541b1294d2704b0964813337f33b291d3f8596b # v3
+        with:
+          fetch-depth: 0
+      - uses: arduino/setup-task@ca745e18916de727f841ec824ac20a615f1cddea # v1
+        with:
+          version: 3.x
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/setup-qemu-action@8b122486cedac8393e77aa9734c3528886e4a1a8 # v1
+      - uses: actions/cache@fd5de65bc895cf536527842281bea11763fefd77 # v3
+        with:
+          path: |
+            ./dist/*.deb
+            ./dist/*.rpm
+            ./dist/*.apk
+          key: ${{ github.ref }}
+      - run: task goreleaser:test:${{ matrix.format }}
   goreleaser:
     runs-on: ubuntu-latest
     env:
