--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,11 +75,13 @@ jobs:
       - uses: sigstore/cosign-installer@v2.6.0
       - uses: anchore/sbom-action/download-syft@v0.12.0
       - name: dockerhub-login
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: ghcr-login
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@49ed152c8eca782a232dede0303416e8f356c37b # v1
         with:
           registry: ghcr.io
