--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -153,6 +153,7 @@ nav:
   - cookbooks/release-a-library.md
   - cookbooks/semantic-release.md
   - cookbooks/set-a-custom-git-tag.md
+  - cookbooks/sign-and-notarizing-osx.md
   - cookbooks/using-main.version.md
   - cookbooks/override-image-name.md
   - cookbooks/goreleaser-xx.md
