--- a/.github/workflows/milestone.yml
+++ b/.github/workflows/milestone.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   milestone:
     runs-on: ubuntu-latest
+    if: github.event.pull_request.head.repo.full_name == github.repository
 
     permissions:
       actions: none
