fix: run on workflow edit too

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,12 +9,14 @@ on:
       - '**/*.go'
       - 'Taskfile.yml'
       - 'Dockerfile'
+      - '.github/workflows/build.yml'
   pull_request:
     paths:
       - 'go.*'
       - '**/*.go'
       - 'Taskfile.yml'
       - 'Dockerfile'
+      - '.github/workflows/build.yml'
 
 permissions:
   contents: read
