chore: avoid running actions when not needed/possible (#3389)
- only run the build action when actual go files changed
- only run some actions on the main fork to avoid errors

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,19 @@ on:
   push:
     branches:
       - 'main'
+    paths:
+      - 'go.*'
+      - '**/*.go'
+      - 'Taskfile.yml'
+      - 'Dockerfile'
+      - '.github/workflows/build.yml'
   pull_request:
+    paths:
+      - 'go.*'
+      - '**/*.go'
+      - 'Taskfile.yml'
+      - 'Dockerfile'
+      - '.github/workflows/build.yml'
 
 permissions:
   contents: read
