--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -24,7 +24,7 @@ jobs:
           token: ${{ secrets.GH_PAT }}
       - uses: actions/setup-go@268d8c0ca0432bb2cf416faae41297df9d262d7f # v3
         with:
-          go-version: 1.19
+          go-version: '>=1.19.1'
       - uses: arduino/setup-task@ca745e18916de727f841ec824ac20a615f1cddea # v1
       - run: task docs:generate
       - run: task schema:generate
