--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/setup-go@268d8c0ca0432bb2cf416faae41297df9d262d7f # v3
         with:
           go-version: '>=1.19.1'
+          cache: true
       - uses: arduino/setup-task@ca745e18916de727f841ec824ac20a615f1cddea # v1
       - run: task docs:generate
       - run: task schema:generate
