docs: update from pro
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -84,6 +84,7 @@ nav:
     - customization/verifiable_builds.md
     - customization/monorepo.md
     - customization/universalbinaries.md
+  - customization/partial.md
   - Packaging and Archiving:
     - customization/archive.md
     - customization/nfpm.md
