feat: chocolatey package support
Generates the chocolatey package structure in order to pack and push to
chocolatey repository.

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -96,6 +96,7 @@ nav:
     - customization/nfpm.md
     - customization/checksum.md
     - customization/snapcraft.md
+    - customization/chocolatey.md
     - customization/docker.md
     - customization/docker_manifest.md
   - customization/sbom.md
