--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -53,16 +53,16 @@ changelog:
     - go mod tidy
   groups:
     - title: Dependency updates
-      regexp: "^.*(feat|fix)\\(deps\\)*:+.*$"
+      regexp: '^[0-9a-h]+ (feat|fix)\(deps\)!?:.+$'
       order: 300
     - title: 'New Features'
-      regexp: "^.*feat[(\\w)]*:+.*$"
+      regexp: '^[0-9a-h]+ feat(\([[:word:]]+\))??!?:.+$'
       order: 100
     - title: 'Bug fixes'
-      regexp: "^.*fix[(\\w)]*:+.*$"
+      regexp: '^[0-9a-h]+ fix(\([[:word:]]+\))??!?:.+$'
       order: 200
     - title: 'Documentation updates'
-      regexp: "^.*docs[(\\w)]*:+.*$"
+      regexp: ^[0-9a-h]+ doc(\([[:word:]]+\))??!?:.+$
       order: 400
     - title: Other work
       order: 9999
