fix(changelog): github pattern matching
GitHub has different output than the tests, including a colon after the
commit reference, so make the pattern resilient to that and other
nuisances by making it a full wild card but non greedy.

Also:
* Remove processed entries instead of striking them out, allowing early
  exit when we're done.
* Add group match debugging to users can see what's going on with --debug.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -53,16 +53,16 @@ changelog:
     - go mod tidy
   groups:
     - title: Dependency updates
-      regexp: '^[[:xdigit:]]+ (feat|fix)\(deps\)!?:.+$'
+      regexp: '^.*?(feat|fix)\(deps\)!?:.+$'
       order: 300
     - title: 'New Features'
-      regexp: '^[[:xdigit:]]+ feat(\([[:word:]]+\))??!?:.+$'
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
       order: 100
     - title: 'Bug fixes'
-      regexp: '^[[:xdigit:]]+ fix(\([[:word:]]+\))??!?:.+$'
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
       order: 200
     - title: 'Documentation updates'
-      regexp: ^[[:xdigit:]]+ doc(\([[:word:]]+\))??!?:.+$
+      regexp: ^.*?doc(\([[:word:]]+\))??!?:.+$
       order: 400
     - title: Other work
       order: 9999
