--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -82,14 +82,17 @@ tasks:
       - cp -rf CONTRIBUTING.md www/docs/contributing.md
       - cp -rf USERS.md www/docs/users.md
       - cp -rf EULA.md www/docs/eula.md
+      - cp -rf SECURITY.md www/docs/security.md
     sources:
       - CONTRIBUTING.md
       - USERS.md
       - EULA.md
+      - SECURITY.md
     generates:
       - www/docs/contributing.md
       - www/docs/users.md
       - www/docs/eula.md
+      - www/docs/security.md
 
   docs:imgs:
     desc: Download and resize images
