--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -129,13 +129,13 @@ docker_manifests:
   - 'ghcr.io/goreleaser/goreleaser:{{ .Tag }}-arm64'
 
 archives:
-  - name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-    replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+  - name_template: >-
+      {{ .ProjectName }}_
+      {{- title .Os }}_
+      {{- if eq .Arch "amd64" }}x86_64
+      {{- else if eq .Arch "386" }}i386
+      {{- else }}{{ .Arch }}{{ end }}
+      {{- if .Arm }}v{{ .Arm }}{{ end }}'
     format_overrides:
     - goos: windows
       format: zip
