chore: use digest when signing
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -287,7 +287,7 @@ docker_signs:
   output: true
   args:
   - 'sign'
-  - '${artifact}'
+  - '${artifact}@${digest}'
 
 publishers:
   - name: fury.io
