docs: improve modeline docs
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/internal/static/config.yaml
+++ b/internal/static/config.yaml
@@ -39,6 +39,7 @@ changelog:
       - '^docs:'
       - '^test:'
 
-# modelines, feel free to remove those if you don't want/use them:
+# The lines beneath this are called `modelines`. See `:help modeline`
+# Feel free to remove those if you don't want/use them.
 # yaml-language-server: $schema=https://goreleaser.com/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
