feat: custom tag.sort
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
     - customization/hooks.md
     - customization/dist.md
     - customization/project.md
+    - customization/git.md
   - Build:
     - customization/build.md
     - customization/verifiable_builds.md
