--- a/.github/workflows/lock.yml
+++ b/.github/workflows/lock.yml
@@ -17,13 +17,13 @@ jobs:
       - uses: dessant/lock-threads@e460dfeb36e731f3aeb214be6b0c9a9d9a67eda6 # v3
         with:
           github-token: ${{ github.token }}
-          issue-lock-inactive-days: 30
-          pr-lock-inactive-days: 30
-          issue-lock-comment: >
+          issue-inactive-days: 30
+          pr-inactive-days: 30
+          issue-comment: >
             This issue has been automatically locked since there
             has not been any recent activity after it was closed.
             Please open a new issue for related bugs.
-          pr-lock-comment: >
+          pr-comment: >
             This pull request has been automatically locked since there
             has not been any recent activity after it was closed.
             Please open a new issue for related bugs.
