fix: reproducible archives

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -139,6 +139,9 @@ archives:
     format_overrides:
     - goos: windows
       format: zip
+    builds_info:
+      group: root
+      owner: root
     files:
       - README.md
       - LICENSE.md
