fix: clarify scoop no windows archive errors
closes #3648

Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -155,6 +155,7 @@ nav:
   - errors/resource-not-accessible-by-integration.md
   - errors/no-history.md
   - errors/multiple-binaries-archive.md
+  - errors/scoop-archive.md
 - deprecations.md
 - Cookbooks:
   - About: cookbooks/index.md
