fix: improve handling of old behavior

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -136,6 +136,7 @@ archives:
       {{- else if eq .Arch "386" }}i386
       {{- else }}{{ .Arch }}{{ end }}
       {{- if .Arm }}v{{ .Arm }}{{ end }}
+    rlcp: true
     format_overrides:
     - goos: windows
       format: zip
