fix: config; warns
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -142,6 +142,7 @@ archives:
     builds_info:
       group: root
       owner: root
+    rlcp: true
     files:
       - README.md
       - LICENSE.md
