--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -103,6 +103,7 @@ nav:
     - customization/chocolatey.md
     - customization/docker.md
     - customization/docker_manifest.md
+    - customization/ko.md
   - customization/sbom.md
   - Signing:
     - Checksums and artifacts: customization/sign.md
