--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -113,6 +113,8 @@ tasks:
     desc: Build docs
     cmds:
       - task: docs:generate
+      - ./scripts/get-releases.sh
+      - ./scripts/set-latest.sh
       - '{{.DOCKER}} run --rm -v ${PWD}/www:/docs docker.io/squidfunk/mkdocs-material build'
 
   docs:vercel:build:
