--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -28,6 +28,7 @@ jobs:
           cache: true
       - uses: arduino/setup-task@d665c6beebae46ff3f699d7b2fd3f1959de7153c # v1
       - run: task docs:generate
+      - run: task docs:releases
       - run: task schema:generate
       - uses: stefanzweifel/git-auto-commit-action@3ea6ae190baf489ba007f7c92608f33ce20ef04a # v4
         with:
