--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,5 @@
 
 www/docs/static/schema.json linguist-generated=true
 www/docs/static/schema-pro.json linguist-generated=true
+www/docs/static/releases.json linguist-generated=true
+www/docs/static/releases-pro.json linguist-generated=true
