--- a/.github/workflows/generate-releases.yml
+++ b/.github/workflows/generate-releases.yml
@@ -1,14 +1,7 @@
-name: generate
+name: generate-releases
 
 on:
-  push:
-    branches:
-      - 'main'
-    paths:
-      - '.github/workflows/generate.yml'
-      - pkg/config/config.go
-      - CONTRIBUTING.md
-      - USERS.md
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -22,16 +15,13 @@ jobs:
       - uses: actions/checkout@755da8c3cf115ac066823e79a1e1788f8940201b # v3
         with:
           token: ${{ secrets.GH_PAT }}
-      - uses: actions/setup-go@6edd4406fa81c3da01a34fa6f6343087c207a568 # v3
-        with:
-          go-version: '>=1.19.4'
-          cache: true
       - uses: arduino/setup-task@d665c6beebae46ff3f699d7b2fd3f1959de7153c # v1
-      - run: task docs:generate
-      - run: task schema:generate
+      - run: task docs:releases
+        env:
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
       - uses: stefanzweifel/git-auto-commit-action@3ea6ae190baf489ba007f7c92608f33ce20ef04a # v4
         with:
-          commit_message: "chore: docs auto-update"
+          commit_message: "chore: docs releases json auto-update"
           branch: main
           commit_user_name: actions-user
           commit_user_email: actions@github.com
