docs: fix descriptions
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/generate-releases.yml
+++ b/.github/workflows/generate-releases.yml
@@ -7,7 +7,7 @@ permissions:
   contents: read
 
 jobs:
-  docs:
+  generate:
     permissions:
       contents: write  # for stefanzweifel/git-auto-commit-action to push code in repo
     runs-on: ubuntu-latest
