docs: update mkdocs options
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -31,6 +31,9 @@ theme:
     - search.suggest
     - search.highlight
     - search.share
+    - content.code.copy
+    - content.action.edit
+    - navigation.footer
 
 plugins:
   - search
