build: only notify generate-releases on a release
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ jobs:
     needs: [ goreleaser ]
     steps:
       - uses: benc-uk/workflow-dispatch@v121
+        if: startsWith(github.ref, 'refs/tags/v')
         with:
           repo: goreleaser/goreleaser
           ref: main
