build: fix htmltest config
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/www/htmltest.yml
+++ b/www/htmltest.yml
@@ -13,7 +13,9 @@ IgnoreURLs:
 - https://github.com/goreleaser/goreleaser/pkgs
 - https://iron.security
 - https://marketplace.visualstudio.com
-- https://linkedin.com
+- linkedin.com
+- repology.org
+- reddit.com
 - docs.github.com
 - help.github.com
 IgnoreDirs:
