build: increase release timeout
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -223,4 +223,4 @@ tasks:
       SNAPSHOT:
         sh: 'if [[ $GITHUB_REF != refs/tags/v* ]]; then echo "--snapshot"; fi'
     cmds:
-      - ./goreleaser release --clean {{.SNAPSHOT}}
+      - ./goreleaser release --clean --timeout 60m {{.SNAPSHOT}}
