build: do not release for windows arm7
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -28,6 +28,9 @@ builds:
     - ppc64
   goarm:
     - "7"
+  ignore:
+    - goos: windows
+      goarch: arm
   mod_timestamp: '{{ .CommitTimestamp }}'
   flags:
     - -trimpath
