build: run test on any workflow change
Signed-off-by: Carlos A Becker <caarlos0@users.noreply.github.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ on:
       - '**/*.go'
       - 'Taskfile.yml'
       - 'Dockerfile'
-      - '.github/workflows/build.yml'
+      - '.github/workflows/*.yml'
 
 permissions:
   contents: read
