--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,10 @@ jobs:
       go-version: '>=1.20.1'
       args: '-disable largeloopcopy'
   test:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
     env:
       DOCKER_CLI_EXPERIMENTAL: "enabled"
     steps:
@@ -44,6 +47,7 @@ jobs:
       - uses: docker/setup-qemu-action@e81a89b1732b9c48d79cd809d8d81d79c4647a18 # v2
       - uses: docker/setup-buildx-action@f03ac48505955848960e80bbb68046aa35c7b9e7 # v2
       - name: setup-snapcraft
+        if: matrix.os == 'ubuntu-latest'
         # FIXME: the mkdirs are a hack for https://github.com/goreleaser/goreleaser/issues/1715
         run: |
           sudo apt-get update
@@ -67,6 +71,7 @@ jobs:
       - name: test
         run: ./scripts/test.sh
       - uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 # v3
+        if: matrix.os == 'ubuntu-latest'
         with:
           file: ./coverage.txt
       - run: ./goreleaser check
