--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,7 @@ jobs:
           cache: true
       - uses: sigstore/cosign-installer@v2.8.1
       - uses: anchore/sbom-action/download-syft@v0.13.3
+        if: matrix.os == 'ubuntu-latest'
       - name: setup-validate-krew-manifest
         run: go install sigs.k8s.io/krew/cmd/validate-krew-manifest@latest
       - name: setup-tparse
