--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,12 +66,17 @@ jobs:
         run: go install sigs.k8s.io/krew/cmd/validate-krew-manifest@latest
       - name: setup-tparse
         run: go install github.com/mfridman/tparse@latest
+        if: matrix.os == 'ubuntu-latest'
       - name: setup
         run: |
           task setup
           task build
       - name: test
+        if: matrix.os == 'ubuntu-latest'
         run: ./scripts/test.sh
+      - name: test
+        if: matrix.os != 'ubuntu-latest'
+        run: task test
       - uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 # v3
         if: matrix.os == 'ubuntu-latest'
         with:
