Apply suggestions from code review

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,8 +18,7 @@ jobs:
     - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3
     - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v3
       with:
-        go-version: '>=1.20.2'
-        cache: true
+          go-version: stable
     - uses: github/codeql-action/init@16964e90ba004cdf0cd845b866b5df21038b7723 # v2
     - uses: github/codeql-action/autobuild@16964e90ba004cdf0cd845b866b5df21038b7723 # v2
     - uses: github/codeql-action/analyze@16964e90ba004cdf0cd845b866b5df21038b7723 # v2
