--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,8 +52,7 @@ jobs:
           mkdir -p $HOME/.cache/snapcraft/stage-packages
       - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v3
         with:
-          go-version: '>=1.20.2'
-          cache: true
+          go-version: stable
       - uses: sigstore/cosign-installer@v3.0.1
       - uses: anchore/sbom-action/download-syft@v0.13.3
       - name: setup-validate-krew-manifest
