--- a/.github/workflows/fig.yml
+++ b/.github/workflows/fig.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c # v3
       - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v3
         with:
-          go-version: '>=1.20.2'
+          go-version: stable
           cache: true
       - run: go run . generate-fig-spec >goreleaser.ts
       - uses: withfig/push-to-fig-autocomplete-action@v1
