build: create scoop manifests inside a bucket folder
refs https://github.com/goreleaser/goreleaser/issues/3899

Signed-off-by: Carlos Alexandro Becker <caarlos0@users.noreply.github.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -214,6 +214,7 @@ scoop:
   bucket:
     owner: goreleaser
     name: scoop-bucket
+  folder: bucket
   homepage:  https://goreleaser.com
   description: Deliver Go binaries as fast and easily as possible
   license: MIT
