--- a/www/mkdocs.yml
+++ b/www/mkdocs.yml
@@ -116,6 +116,7 @@ nav:
     - customization/docker_manifest.md
     - customization/ko.md
   - customization/sbom.md
+  - customization/reportsizes.md
   - Signing:
     - Checksums and artifacts: customization/sign.md
     - Docker Images and Manifests: customization/docker_sign.md
